cluster/apps/default/display/display.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: display-dpl
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: display
  template:
    metadata:
      labels:
        app: display
    spec:
      containers:
      - name: display
        image: nginx:stable-alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: display-vol
          readOnly: True
      volumes:
      - name: display-vol
        persistentVolumeClaim:
          claimName: display-vol-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: display-svc
  namespace: default
spec:
  selector:
    app: display
  ports:
    - protocol: TCP
      port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: display
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
spec:
  tls:
    - secretName: display-tls
      hosts:
        - display.bergmann.click
  rules:
  - host: display.bergmann.click
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: display-svc
              port:
                number: 80
